--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "author": "",
   "license": "ISC",
-  "browserlist": "last 4 versions",
+  "browserslist": "last 4 versions",
   "bugs": {
     "url": "https://github.com/MarcGotze/Projet-3/issues"
   },
