--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "sass": "sass --watch ./sass/main.scss:./public/css/style.css",
-    "prefix" : "postcss ./public/css/style.css --use autoprefixer -d .public/css/prefixed/"
+    "prefix": "postcss ./public/css/style.css --use autoprefixer -d .public/css/prefixed/"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/MarcGotze/Projet-3/issues"
   },
-  "homepage": "https://github.com/MarcGotze/Projet-3#readme"
+  "homepage": "https://github.com/MarcGotze/Projet-3#readme",
+  "dependencies": {
+    "normalize.css": "^8.0.1"
+  }
 }
